<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailFragment"
    android:orientation="vertical"
    android:gravity="center">


    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:autofillHints="Enter email"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/validateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Validate" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="64dp"
        android:text="..."
        android:textSize="16sp" />
</LinearLayout>